# redact-it

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks-local.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  README.md  setup.cfg
.github/workflows/: pr-check.yml
redact_it/: __init__.py  cli.py  redact_it.py  redact_yaml.py
tests/: conftest.py  test_redact_it.py  test_redact_it_yaml.py
