[metadata]
name = redact
version = 0.0.0
description = Tool used to redact data from files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryankwilliams/redact-it
author = Ryan Williams
license = GPL-3.0
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GPLv3 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    click
    ruamel.yaml
python_requires >= 3.9
package_dir =
    = .

[options.entry_points]
console_scripts =
    redact-it = redact_it.cli:cli
